--- a/NeteaseIM/Podfile
+++ b/NeteaseIM/Podfile
@@ -1,15 +1,16 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '11.0'
 
 target 'NeteaseIM' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for NeteaseIM
-  pod 'MessageKit', '~> 1.0.0-beta.2'
+  pod 'MessageKit', '~> 1.0.0'
   pod 'NIMSDK'
   pod 'Kingfisher', '~> 4.0'
   pod 'SnapKit', '~> 4.0.0'
+  pod 'PKHUD', '~> 5.0'
 
   target 'NeteaseIMTests' do
     inherit! :search_paths
